add Next JS client microservice add client Deployment add client ClusterIP add ingress routing rules add skaffold config to watch changes in client add next.config  -  add webpack middleware configuration to poll and check changes every 3s'

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -19,3 +19,12 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .                                    
+    - image: yonatanlavie/client
+    # - image: us.gcr.io/ticketing-dev-325321/auth
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '**/*.js'
+            dest: .                                    
