create order service  - orders-depl create orders mongoDB service  - orders-mongo-depl create order service (copy files from tickets service )  - Dockerfile & .dockerignore  - app.tx  - index.ts  - nats-wrapper.ts  - refactor router to order router api calls create orders routes  - index  - new  - show  - delete
skaffold file
 - add orders service

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -37,3 +37,12 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .                                    
+    - image: yonatanlavie/orders
+    # - image: us.gcr.io/ticketing-dev-325321/auth
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .                                    
