--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -54,3 +54,11 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .                                  
+    - image: yonatanlavie/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .                                  
