--- a/infra/k8s/payments-depl.yaml
+++ b/infra/k8s/payments-depl.yaml
@@ -21,6 +21,11 @@ spec:
               secretKeyRef:
                 name: jwt-secret
                 key: JWT_KEY
+          - name: STRIPE_KEY
+            valueFrom:
+              secretKeyRef:
+                name: stripe-secret
+                key: STRIPE_KEY
           - name: MONGO_URI
             value: "mongodb://payments-mongo-srv:27017/payments"
         # image: us.gcr.io/ticketing-dev-325321/payments
@@ -34,7 +39,7 @@ spec:
             value: ticketing        
         resources:
           limits:
-            memory: "256Mi"
+            memory: "500Mi"
             cpu: "500m"
 ---
 apiVersion: v1
