--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next"
+    "dev": "next",
+    "start": "NODE_OPTIONS='--openssl-legacy-provider --inspect' next dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
-    "bootstrap": "^5.1.1",
-    "next": "^11.1.2",
+    "bootstrap": "^5.1.3",
+    "next": "^11.1.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-stripe-checkout": "^2.6.3"
   }
 }
