--- a/client/package.json
+++ b/client/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "js_app",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "next",
-    "start": "NODE_OPTIONS='--openssl-legacy-provider --inspect' next dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.4",
-    "bootstrap": "^5.1.3",
-    "next": "^11.1.3",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
+    "axios": "^1.3.4",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.2.1",
+    "next": "^13.2.1",
+    "nootstrap": "^1.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-stripe-checkout": "^2.6.3"
   }
 }
