--- a/expiration/package.json
+++ b/expiration/package.json
@@ -18,11 +18,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ly-common-lib/common": "^1.0.13",
+    "@ly-common-lib/common": "^1.0.22",
     "@types/bull": "^3.15.5",
     "bull": "^3.29.3",
     "node-nats-streaming": "^0.3.2",
-    "ts-node-dev": "^1.1.8",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
