--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,9 +1,10 @@
-apiVersion: skaffold/v2alpha3
+apiVersion: skaffold/v3
 kind: Config
+manifests:
+ rawYaml:
+ - ./infra/k8s/*
 deploy:
-  kubectl:
-    manifests:
-      - ./infra/k8s/*
+ kubectl: {}
 build:
   local:
     push: true
