--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ly-common-lib/common": "^1.0.14",
+    "@ly-common-lib/common": "^1.0.22",
     "@types/cookie-session": "^2.0.43",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
@@ -31,7 +31,8 @@
     "mongoose": "^6.0.5",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
-    "ts-node-dev": "^1.1.8",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
